@@ -14,9 +14,9 @@ import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.screens.MenuScreens;
 import net.minecraft.client.renderer.MultiBufferSource;
 import net.minecraft.client.renderer.texture.OverlayTexture;
+import net.minecraft.core.Direction;
 import net.minecraft.world.entity.player.Inventory;
 import net.minecraft.world.level.block.entity.BlockEntity;
-import net.minecraft.core.Direction;
 
 import javax.annotation.Nonnull;
 
@@ -57,7 +57,9 @@ public class GuiTabletScreen extends GenericGuiContainer<ScreenTileEntity, Scree
         x -= 102;
         y -= 32;
 
-        ScreenTileEntity.ModuleRaytraceResult result = tileEntity.getHitModule(x / 100.0, y / 100.0, 0, Direction.NORTH, Direction.NORTH, 1);
+        double dx = 1.0 - (x / 60.0);
+        double dy = 1.0 - (y / 60.0);
+        ScreenTileEntity.ModuleRaytraceResult result = tileEntity.getHitModule(dx, dy, 0, Direction.NORTH, Direction.NORTH, 1);
         if (result != null) {
             tileEntity.hitScreenClient(result);
         }
@@ -66,6 +68,7 @@ public class GuiTabletScreen extends GenericGuiContainer<ScreenTileEntity, Scree
 
     @Override
     public void render(@Nonnull PoseStack matrixStack, int mouseX, int mouseY, float partialTicks) {
+        tileEntity.tickMe();
 //        super.render(mouseX, mouseY, partialTicks);
         MultiBufferSource.BufferSource buffer = Minecraft.getInstance().renderBuffers().bufferSource();
 
