@@ -1,3 +1,6 @@
+Upcoming:
+- Fixed interaction with potential buttons on that screen
+
 1.19-5.1.8:
 - Fixed a visual problem with the syringe which would appear full on first crafting
 
